5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1638_2730.log
== TEST (2019-04-09 10:17:58) 
-- CODE:
x = float(input("Coordenada x:"))
y = float(input("Coordenada y"))





if(y>=0):
	xey = Q1
	print(Q1)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:29) 
-- CODE:
x = float(input("Coordenada x:"))
y = float(input("Coordenada y"))
Q1 = Superiores




if(y>=0):
	xey = Q1
	print(Q1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = Superiores
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:49) 
-- CODE:
x = float(input("Coordenada x:"))
y = float(input("Coordenada y"))
Q1 = "Superiores"




if(y>=0):
	xey = Q1
	print(Q1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 = Superiores
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:19:37) 
-- CODE:
x = float(input("Coordenada x:"))
y = float(input("Coordenada y"))
Q1 = "Superiores"
Q3 = "Infereiores"



if(y>=0):
	xey = Q1
	print(Q1)
else:
	xey = Q3
	print(Q3)
-- OUTPUT:
Infereiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:19:53) 
-- CODE:
x = float(input("Coordenada x:"))
y = float(input("Coordenada y"))
Q1 = "Superiores"
Q3 = "Inferiores"



if(y>=0):
	xey = Q1
	print(Q1)
else:
	xey = Q3
	print(Q3)
-- EXECUTION TIME:
0.162492
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
